rhdlc/test/compile-fail/multiple-definition-struct-fn/top.rhdl
struct a {}

struct b {}

struct c {}

fn b() {}
